# algoritmos2-tps

./: .gitignore  .travis.yml  CMakeLists.txt  generar_entrega.sh  travis_script.sh
abb/: abb.c  abb.h  abb_aux  pruebas_abb.c  pruebas_abb_alumno.c  pruebas_alumno.c
cola/: cola.c  main.c  pruebas  pruebas_alumno.c  testing.c  testing.h
hash/: hash.c  hash.h  pruebas_catedra.c
heap/: heap.c  heap.h  prueba  pruebas_alumnos.c
lista/: lista.c  lista.h  main.c  pruebas_alumno.c
lista_enlazada/: lista.c  lista.h  lista_enlazada.c  lista_enlazada.h  pruebas  pruebas_alumno.c
pila/: Makefile  main.c  pila  pruebas  pruebas_alumno.c
pila_enlazada/: Makefile  pila.c  pruebas  testing.c
tp0/: pruebas  tp0.c  tp0.h  tp0_pruebas.c
tp1/: deps.mk  main.c  payment.c  payment.h  prueba1.txt  prueba2.txt  prueba3.txt  prueba4.txt  prueba_comando_inexistente.txt  prueba_comando_invalido.txt  prueba_dos_pagos.txt  prueba_impresion.txt  prueba_un_pago.txt  pruebas  strcopy.h  strutil.c  strutil.h  strutil_tests.c  tp1.c  tp1.h  user.c  user.h  users.csv
tp1/tdas/: cola.c  cola.h  nodo.c  nodo.h
tp2/: abb.c  abb.h  deps.mk  function.h  functions.c  functions.h  heap.h  in  main.c  prueba  prueba1.txt  strutil.c  strutil.h  tp  tp2.c  tp2.h  visit.c  visit.h
tp2/tdas/: abb.c  abb.h  hash.c  hash.h  heap.c  lista.c  lista.h  pila.c
tp3/: graph.py  graph_functions.py  kevin_bacon.py  main.py  queue.py  seis_grados.py
vd/: pruebas  vector_dinamico.c  vector_dinamico.h  vector_dinamico_pruebas.c
